@@ -16,8 +16,8 @@ a:active				{color:rgba(46,46,46,1);}
 
 /*	Main wrappers for content & fixed background img
 	============================================= */
-.main_wrap				{background-color:rgba(255,255,255,0.4);}
-.overlay				{background-color:rgba(255,255,255,0.9);}
+.main_wrap				{background-color:rgba(255,255,255,1);}
+.overlay				{background-color:rgba(246,246,246,1);}
 .center_wrap			{width:962px;}
 
 
