@@ -181,11 +181,24 @@ This test instance of d-portal number <span class="beige_key">{beige_instance_ke
 					<label for="iati_lang" class="iati_lang_label">Choose your language</label>
 					<select id="iati_lang" class="iati_lang_opt">
 						<option value="en" selected="">English</option>
+						<option value="en">Spanish</option>
+						<option value="en">French</option>
+						<option value="en">Chinese</option>
+						<option value="en">Hindi</option>
+						<option value="en">Japanese</option>
 					</select>
 				</div>
 				<a href="https://docs.d-portal.org/en/latest/" class="iati_button">
 					<span>Help Docs</span> <img src="/ctrack/art/original/info_icon.png" alt="Information icon" width="15" height="15">
 				</a>
+				<div class="iati_lang">
+					<label for="iati_lang" class="iati_lang_label">Choose your theme</label>
+					<select id="iati_lang" class="iati_lang_theme">
+						<option value="en" selected="">Classic</option>
+						<option value="en">Nuke</option>
+						<option value="en">Print</option>
+					</select>
+				</div>
 			</div>
 			<div class="iati_head_title">
 				<p class="iati_head_title_sub">IATI Tools</p>
