@@ -2,6 +2,9 @@ Development Portal (2025-01-09 shi)
 ==============================
 Add social icons to footer
 Update main_head for original and white versions
+Update light grey background
+Update status section
+Add theme dropdown
 
 
 Development Portal (2025-01-08 shi)
